<resources>
    <string name="app_name">MuseumApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Museums of Budapest</string>
    <string name="nav_header_subtitle">someemail@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="museum_of_illusions">Museum of Illusions</string>
    <string name="national_gallery">National Gallery</string>
    <string name="mucsarnok">Műcsarnok</string>
    <string name="mai_mano_house">Mai Manó House</string>
    <string name="lumu">Ludwig Museum</string>
    <string name="elte">ELTE</string>
    <string name="mfab">Museum of Fine Arts</string>
    <string name="petofi">Petőfi Literary Museum</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">

        "Enter the fascinating world of illusions that will trick your reliance on your senses,but also amaze you at the same time; the world that will confuse you completely, but also educate you\u2026 Visit us and you will be thrilled because nothing is what it seems, especially not in HERE!\n\nAre you ready for even a bigger, better, and more fascinating adventure? Here at the Museum of Illusions in Budapest we offer you an intriguing visual, sensory and educational experience with a handful of new, unexplored illusions."

        "\n\n The Museum of Illusions in Budapest provides you with a space suitable both for social and entertaining tours through the world of illusions, prone to delight all generations."

        "\n\n It is a perfect place to gain new experiences and have fun with friends and family. Not only is it a place for children who love paying it a visit, but it is also a place for parents, grandparents and couples."

        "\n\n Be brave enough to jump into an illusion created by the Vortex Tunnel that will drive you crazy and make stepping forward through a rotating cylinder seem as a great struggle and yet the surface is so stable and flat! Deform the image of yourself in the Mirror Room, lose yourself in the Infinity room, resist the laws of gravity and size ratio, and take pictures of yourself in EVERY POSSIBLE POSE!"

        "\n\n Enjoy in our collection of holograms, look closer at every optical illusion and thoroughly observe each installation. They are such a brilliant, playful reminder that our assumptions about the world we perceive are often nothing but a specter of illusions.\n If you are told that you will remain speechless faced with such an exhibition, would you believe it?\n \n Every corner of the Museum of Illusions is accompanied by a rational and scientific explanation that allows you to learn a whole lot of extraordinary things about our vision, our perception and the functioning of our intellect. The goal is to discover why our eyes perceive things that are incomprehensible to our brain."

        "\n\n Make sure you visit our playroom with intriguing and educational games and puzzles. These brain bashers are definitely great fun but they also tend to be frustrating.\n\nCome and explore the world of illusions! Experience the impossible! Make sure your camera is fully charged and that there is enough memory space before you visit. By all means, take your camera with you."


    </string>
    <string name="national_gallery_text">

        "The history of the Royal Palace in the Buda Castle, which was at that time recognised as a magnificent royal residence in Europe, dates back to the 14th century, the reign of kings Louis the Great, Sigismund, and Matthias Corvinus (1458–1490). The state of the building badly deteriorated during the Turkish occupation starting in 1541, and during the Battle of Buda in 1686. The restoration, in the then fashionable Baroque style, began during the reign of Queen Maria Theresa in 1749. "

        "\n\n  At the end of the 19th century the palace was expanded with another wing according to the plans of architects Miklós Ybl and Alajos Hauszmann, and later neo-Baroque ornamentation was also added. During World War II the building was again severely damaged; its reconstruction began in the 1960s. The Hungarian National Gallery moved to the Royal Palace of Buda Castle in 1975."

        "\n\n The Hungarian National Gallery is the largest public collection documenting and presenting the rise and development of the fine arts in Hungary. It has operated as an independent institution since 1957. The HNG moved to its present location, the former Royal Palace of Buda, in 1975."

        "\n\n The Buda Palace with its characteristic Dome, easily recognizable even from afar is one of the symbols of Budapest. As the highest point of the Palace, the Dome of the Hungarian National Gallery offers an unparalleled view on the capital."

        "\n\n The family crypt in Buda Castle holding the earthly remains of Archduke Joseph, Palatine of Hungary, his family members and descendants, is the only part of the Hungarian National Gallery that still preserves something of the palace’s original, 19th-century beauty. The crypt was part of and located under the Saint Sigismund chapel, which was demolished in 1961. From the 1790s the palace became the residence of the palatine, i.e. the prevailing Hungarian representative of the king. Archduke Joseph, a brother of King Francis I, held the title of palatine between 1795 and 1847 and, with royal consent, was the first to have the crypts of the castle chapel converted into a family burial place. After the death of the palatine and his widow their son, Joseph Karl, commissioned two architects, first Miklós Ybl and later Alajos Hausmann, to reconstruct the crypt, while the sculptor, György Zala, was entrusted with making the palatine’s sepulchre."

        "\n\n Make sure you visit our playroom with intriguing and educational games and puzzles. These brain bashers are definitely great fun but they also tend to be frustrating.\n\nCome and explore the world of illusions! Experience the impossible! Make sure your camera is fully charged and that there is enough memory space before you visit. By all means, take your camera with you."


    </string>
    <string name="aquincum_text">
        "The Aquincum Museum is very informative. It is great to see the authentic artifacts. It was made beautifully by the Romans, and some of the items were even worn. The museum also has interesting gold coins which can be found on the top floor of the museum. The museum in District 3 and can easily be reached on the H5 from Budapest. It has been open since 1894 and every year welcomes thousands of visitors through its gates. If you want to learn about Hungary, why not start with what it was like almost 2,000 years ago?"

        "\n\nDescription of The Exhibitions"

        "\n\nThe Roman Empire was one of the greatest in history. During this time, Hungary was a province of Rome which was called Pannonia and Aquincum was a Pannonian citythe capital of the lower part of this province (Lower Pannonia) next to the Danube. Today, the ruins of Aquincum remain and left if you are interested in Roman history, you can’t miss this. There is a mixture of permanent and temporary displays, and there are also workshops that you can take part in to learn even more about the fascinating Roman history. Enjoy the collections of mosaics, jewelry, pots and even an organ inside the museum, and leave wanting to find out even more about the Roman history scattered around the city. "
        "\n\nWhat are the ticket prices?"
        "\n2,200 HUF/adult"
        "\n1,300HUF/student, youth, pensioner"
        "\n\nFor Groups over 10 people:\n1,100 HUF/adult\n900HUF/student, youth, pensioner."




    </string>
    <string name="mucsarnok_text">

        "Ever since its establishment at the end of the 19th century, Kunsthalle has been the centre of contemporary Hungarian fine art, and a key institution in canon-formation. It is a national institution with the mission of exhibiting the most significant trends of both contemporary Hungarian and international fine art in Budapest."

        "\n\n The art centre at Heroes’ Square in Budapest is open to the whole spectrum of Hungarian visual culture. It operates strictly according to the principle of aesthetic value, without any constraint of ideology or age. Besides organising exhibitions, programs involving other art forms, and academic conferences, Kunsthalle’s publishing activity is significant as well."

        "\n\n The Műcsarnok (“art hall”) was founded in 1877 on the initiative of the Hungarian National Fine Arts Association. The original building was situated at 69–71 Andrássy Street, now home to the University of Fine Arts. The exhibition hall on Heroes’ Square was erected in 1896 for the millennium celebrations, and was designed by Albert Schikedanz. Today the hall operates on the pattern of the German Kunsthalle: it is an institution run by artists that does not maintain its own collection. The three-bayed, semi-circular apse houses a roofed exhibition hall that allows in light through the roof. Since the building was renovated in 1995 the Műcsarnok has welcomed visitors and leading Hungarian and international contemporary artists alike, mediating and representing modern artistic tendencies whilst not maintaining its own permanent collection."

    </string>
</resources>