<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/baseline_perm_contact_calendar_24"
            android:title="Credits" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_national_museum"
            android:icon="@drawable/mng_logo_24"
            android:title="@string/national_gallery" />
        <item
            android:id="@+id/nav_mucsarnok"
            android:icon="@drawable/mucsarnok_24"
            android:title="@string/mucsarnok" />
        <item
            android:id="@+id/nav_mai_mano_house"
            android:icon="@drawable/mmh_24"
            android:title="@string/mai_mano_house" />
        <item
            android:id="@+id/nav_lumu"
            android:icon="@drawable/lumu_24"
            android:title="@string/lumu" />
        <item
            android:id="@+id/nav_mfab"
            android:icon="@drawable/mfab_24"
            android:title="@string/mfab" />
        <item
            android:id="@+id/nav_museum_of_illusions"
            android:icon="@drawable/imu_24"
            android:title="@string/museum_of_illusions" />
        <item
            android:id="@+id/nav_elte"
            android:icon="@drawable/elte_24"
            android:title="@string/elte"/>
        <item
            android:id="@+id/nav_petofi"
            android:icon="@drawable/elte_24"
            android:title="@string/petofi"/>

    </group>
</menu>