<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.museumapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.museumapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_museum_of_illusions"
        android:name="com.example.museumapp.ui.museum_of_illusions_folder.museum_of_illusions"
        android:label="@string/museum_of_illusions"
        tools:layout="@layout/fragment_example_museum" />
    <fragment
        android:id="@+id/nav_credits"
        android:name="com.example.museumapp.ui.credits_folder.credits"
        android:label="Credits"
        tools:layout="@layout/fragment_credits" />
    <fragment
        android:id="@+id/nav_national_museum"
        android:name="com.example.museumapp.ui.national_gallery_folder.national_gallery"
        android:label="@string/museum_of_illusions"
        tools:layout="@layout/fragment_national_gallery" />
    <fragment
        android:id="@+id/nav_mucsarnok"
        android:name="com.example.museumapp.ui.mucsarnok_folder.mucsarnok"
        android:label="@string/mucsarnok"
        tools:layout="@layout/fragment_mucsarnok" />
    <fragment
        android:id="@+id/nav_mai_mano_house"
        android:name="com.example.museumapp.ui.mai_mano_house_folder.mai_mano_house"
        android:label="@string/mai_mano_house"
        tools:layout="@layout/fragment_mai_mano_house" />
    <fragment
        android:id="@+id/nav_visual_arts"
        android:name="com.example.museumapp.ui.visual_arts_folder.visual_arts"
        android:label="Visual Arts"
        tools:layout="@layout/fragment_visual_arts" />
    <fragment
        android:id="@+id/nav_science"
        android:name="com.example.museumapp.ui.science_fragment.science"
        android:label="Science"
        tools:layout="@layout/fragment_science" />
    <fragment
        android:id="@+id/nav_other"
        android:name="com.example.museumapp.ui.other_folder.other"
        android:label="Science"
        tools:layout="@layout/fragment_other" />
    <fragment
        android:id="@+id/nav_lumu"
        android:name="com.example.museumapp.ui.lumu_folder.lumu"
        android:label="Ludwig Museum"
        tools:layout="@layout/fragment_lumu" />
    <fragment
        android:id="@+id/nav_mfab"
        android:name="com.example.museumapp.ui.mfab_folder.mfab"
        android:label="Museum of Fine Arts"
        tools:layout="@layout/fragment_mfab" />
    <fragment
        android:id="@+id/nav_elte"
        android:name="com.example.museumapp.ui.elte_folder.elte"
        android:label="ELTE"
        tools:layout="@layout/fragment_elte" />
    <fragment
        android:id="@+id/nav_petofi"
        android:name="com.example.museumapp.ui.petofi_folder.petofi"
        android:label="Petőfi Literary Museum"
        tools:layout="@layout/fragment_petofi" />
    <fragment
        android:id="@+id/nav_hdke"
        android:name="com.example.museumapp.ui.hdke_folder.hdke"
        android:label="Holocaust Museum"
        tools:layout="@layout/fragment_hdke" />
    <fragment
        android:id="@+id/nav_aquincum"
        android:name="com.example.museumapp.ui.aquincum_folder.aquincum"
        android:label="Aquincum Museum"
        tools:layout="@layout/fragment_aquincum" />

</navigation>